--- a/index.html
+++ b/index.html
@@ -1,87 +1,58 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
+  <head>
   <meta charset="utf-8">
-  <title>Sai Meenakshinathan S Personal Site</title>
-</head>
+    <title>Sai Meenakshinathan S</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Ashwin,</h1>
+      <h2>a <span>student</span> in FXEC.</h2>
+      <img class="bottom-cloud"src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="cloud-img">
+  </div>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/sai.png" alt="sai profile picture"></td>
-      <td><h1>Sai Meenakshinathan S</h1>
-      <p><em>Student in <strong><a href="https://www.francisxavier.ac.in">Francis Xavier Enginnering College</a></strong></em></p>
-      <p>I am from Tirunelveli Town. I am well versed in communication skills.I ma good at programming skills such as Python,C,HTML and CSS. I know languages like Tamil, English and Hindi.</p></td>
-    </tr>
-  </table>
-  <hr>
-  <h3>Education and Percentage of Marks Obtained</h3>
-  <ul>
-    <li>Secondary School Education at <strong><a href="http://www.lfps.in">Little Flower Model School</a></strong></li>
-    <ul>
-      <li>9th  - 93%</li>
-      <li>10th - 97%</li>
-    </ul>
-    <li>Higher School Education at Little Flower Matriculation School</li>
-    <ul>
-      <li>11th - 83%</li>
-      <li>12th - 88%</li>
-    </ul>
-  </ul>
-  <hr>
-  <h3>GPA for each semesters</h3>
-<table>
-  <thead>
-    <tr>
-      <th>Semester</th>
-      <th>GPA</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>First</td>
-      <td>9.61</td>
-    </tr>
-    <tr>
-      <td>Second</td>
-      <td>10.00</td>
-    </tr>
-    <tr>
-      <td>Third</td>
-      <td>10.00</td>
-    </tr>
-    <tr>
-      <td>Fourth</td>
-      <td>10.00</td>
-    </tr>
 
-  </tbody>
-</table>
-<hr>
-<h3>Skills</h3>
-<table cellspacing="10">
-  <tr>
-    <td>CSS</td>
-    <td>🌟🌟🌟</td>
-</tr>
-<tr>
-    <td>Python</td>
-    <td>🌟🌟🌟🌟🌟</td>
-  </tr>
-  <tr>
-    <td>HTML</td>
-    <td>🌟🌟🌟🌟🌟</td>
-</tr>
-<tr>
-    <td>C</td>
-    <td>🌟🌟🌟🌟🌟</td>
-  </tr>
-</table>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="images/saiprofile-modified.png" alt="saiprofile">
+      <h2>Hello.</h2>
+      <p class="intro">I am a student from Francis Xavier Engineerinfg College. I am a future software developer.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="skills-1" src="images/coding.gif" alt="coding">
+        <h3>Learning to be a perfect coder.</h3>
+        <p>I am the one who have more passionate on coding. When I started to learn coding, I realized that all around us were coding.</p>
+      </div>
+      <div class="skill-row">
+        <img class="skills-2" src="images/leadership-skills.jpg" alt="leadership">
+        <h3>Leadership Skills</h3>
+        <p>Eventhough we are coder, everyone must have leadership skill which will coordinate the certain things. I had it.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>I am always here to help you.</h3>
+      <p class="contact-me-para">If you have any issues or queries felt with me, please ask and clarify it.</p>
+      <a class="btn" href="mailto:sai555ashwin@email.com">CONTACT ME</a>
+    </div>
+  </div>
 
-<hr>
-  <strong><a href="hobbies.html" target="_blank">My Hobbies</a></strong> <br><br>
-  <strong><a href="contacts.html" target="_blank">Contact Details</a></strong>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="footer-para">© Sai Meenakshinathan S @Ashwin.</p>
+  </div>
+
 </body>
-
 </html>
